build_log_v4.txt
warning: `C:\Users\nalum\nih-plug-projects\dtcwpt_morph\.cargo\config` is deprecated in favor of `config.toml`
  |
  = help: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Checking dtcwpt_morph v0.1.0 (C:\Users\nalum\nih-plug-projects\dtcwpt_morph)
warning: unused import: `nih_plug_egui::EguiState`
 --> src\lib.rs:2:5
  |
2 | use nih_plug_egui::EguiState;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Shape`
 --> src\editor.rs:4:97
  |
4 | use nih_plug_egui::egui::{self, Color32, RichText, Rect, Pos2, Stroke, CornerRadius, UiBuilder, Shape};
  |                                                                                                 ^^^^^

error[E0382]: borrow of moved value: `path`
   --> src\editor.rs:328:30
    |
267 |         let path = crate::topology::TopologyPlanner::index_to_path(node_id);
    |             ---- move occurs because `path` has type `std::string::String`, which does not implement the `Copy` trait
...
320 |                 current_dests.push(path);
    |                                    ---- value moved here
...
328 |         response.on_hover_ui(|ui| {
    |                              ^^^^ value borrowed here after move
329 |             ui.label(format!("Path: {}", path));
    |                                          ---- borrow occurs due to use in closure
    |
help: consider cloning the value if the performance cost is acceptable
    |
320 |                 current_dests.push(path.clone());
    |                                        ++++++++

warning: unused variable: `x_center`
   --> src\editor.rs:273:13
    |
273 |         let x_center = rect.min.x + rect.width() / 2.0;
    |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_x_center`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `is_pure_h`
   --> src\processor.rs:352:17
    |
352 | ...   let is_pure_h = dest == 3 || (dest > 1 && (dest & (dest + 1)) == 0 && dest.count_ones() == (dest.trailing_ones())); // Pure H path:...
    |           ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_pure_h`

warning: unused variable: `node_ids`
   --> src\processor.rs:539:5
    |
539 |     node_ids: &[usize],
    |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_node_ids`

For more information about this error, try `rustc --explain E0382`.
warning: `dtcwpt_morph` (lib) generated 5 warnings
error: could not compile `dtcwpt_morph` (lib) due to 1 previous error; 5 warnings emitted
